cluster-service/deploy/istio.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cluster-service
spec:
  selector:
    matchLabels:
      app: clusters-service
  portLevelMtls:
    8080:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-metrics
  namespace: cluster-service
spec:
  action: "ALLOW"
  rules:
    - to:
      - operation:
          paths: ["/metrics"]
          methods: ["GET"]
          ports: ["8080"]
  selector:
    matchLabels:
      app: "clusters-service"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: cluster-service
spec: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-frontend
  namespace: cluster-service
spec:
  action: "ALLOW"
  rules:
    - from:
      - source:
          principals:
            - "cluster.local/ns/aro-hcp/sa/frontend"
            - "cluster.local/ns/aro-hcp/sa/backend"
      to:
      - operation:
          ports:
            - "8000"
  selector:
    matchLabels:
      app: "clusters-service"
---
# TODO: Remove when migration to Azure Postgres completes
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-namespace
  namespace: cluster-service
spec:
  action: "ALLOW"
  rules:
    - from:
      - source:
          principals: ["cluster.local/ns/cluster-service/sa/clusters-service"]
      to:
      - operation:
          ports:
            - "5432"
  selector:
    matchLabels:
      name: "ocm-cs-db"
